packages/argocd/manifests/ingress-argocd.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - argocd.advaitt.people.aws.dev
      secretName: argocd-prod-tls
  rules:
    - host: argocd.advaitt.people.aws.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-hub-server
                port:
                  name: https
